# django_csv_permissions

./: .gitignore  PROMPT.md  README.md  manage.py  pyproject.toml
django_csv_permissions/: __init__.py  admin.py  apps.py  models.py
django_csv_permissions/management/commands/: download_admin_permissions_csv.py  upload_admin_permissions_csv.py
tests/: settings.py  test_csv_permissions.py
tests/sampleapp/: apps.py
