[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "django-csv-permissions"
version = "0.1.0"
description = "Export/import Django admin model permissions for Groups via CSV."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ben Kremer" }]
dependencies = ["Django>=3.2"]

[project.urls]
Homepage = "https://github.com/kremerben/django_csv_permissions"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["django_csv_permissions*"]
